--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "My personal Website",
   "main": "index.html",
   "scripts": {
+    "start": "live-server .",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
