--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "My personal Website",
   "main": "index.html",
   "scripts": {
-    "start": "live-server .",
+    "start": "parcel src/index.html",
+    "build": "parcel build src/index.html",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -18,6 +19,6 @@
   },
   "homepage": "https://github.com/benjamintautfest/personal-website#readme",
   "dependencies": {
-    "live-server": "^1.2.1"
+    "parcel-bundler": "^1.12.4"
   }
 }
